--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -144,7 +144,7 @@ a {
 
     &:hover {
       .title {
-        color: #94AA62;
+        color: #3d8bce;
       }
       .job {
         color: #888888;
@@ -254,15 +254,6 @@ a {
     height: $card-lh * 8;
     margin-bottom: 0;
 
-    &:after {
-      color: #aaaaaa;
-      content: "…";
-      position: absolute;
-      bottom: 50px;
-      right: 13px;
-      background: #ffffff;
-    }
-
     .title {
       transition: 0.3s;
       text-align: center;
@@ -277,6 +268,7 @@ a {
 
       span:nth-child(2):before {
         content: " / ";
+        color: #999999;
       }
     }
 
